[gd_scene load_steps=3 format=3 uid="uid://bysrp2cq0vumt"]

[ext_resource type="Theme" uid="uid://iivwh67cjc1k" path="res://scenes/UI/base_theme.tres" id="1_1apxo"]
[ext_resource type="Script" path="res://ui/in_game_pause_options.gd" id="1_erj1v"]

[node name="in_game_pause" type="CanvasLayer"]
script = ExtResource("1_erj1v")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource("1_1apxo")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -58.0
offset_right = 90.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="RESUME" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "RESUME GAME"

[node name="RESTART" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "RESTART"

[node name="SETTINGS" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "SETTINGS"

[node name="MAIN MENU" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "MAIN MENU"

[node name="EXIT GAME" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "EXIT GAME"

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/RESUME" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/RESTART" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/SETTINGS" to="." method="_on_settings_pressed"]
